--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -47,6 +47,7 @@ ru:
             description: "Укажите, в какую группу какие уведомления посылать"
             only_unassigned: "Только не назначенные"
             anytime: "Круглосуточно и без выходных"
+            new_alarm_required: "Уведомлять о новых авариях"
           watchers:
             description: "Укажите, какие уведомления отправлять наблюдателям задачи"
         reminder:
