--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -88,6 +88,10 @@ ru:
             hours_short: "ч."
             notice: Рабочее время и приоритеты срочных задач указываются в <a href="/settings/plugin/redmine_intouch" target="_blank">настройках плагина</a>.
             remind_with_interval: "Уведомлять <br> с интервалом"
+            minutes: "Значения <br> минут"
+            float_values: "Дробные <br> значения"
+            hint_for_minutes_label: Подсказка для выставления интервалов
+            hint_for_minutes: Например, для статуса "Авария" - 0.16 (10 минут), для статуса "Высокий" - 0.83 (50 минут), для статуса "Нормальный" - 3.83 (3 часа 50 минут)
           overdue:
             description_1: Каждый рабочий день, по расписанию, указанному в <a href="/settings/plugin/redmine_intouch?tab=sidekiq_cron_jobs" target="_blank">настройках плагина</a>, следующие пользователи будут получать сообщения о <strong>просроченных</strong> задачах, а также задачах <strong>без указанной даты завершения</strong>.
             description_2: "На e-mail каждому адресату будет приходить одно письмо со списком задач. В Telegram будет отправлен ряд сообщений о каждой задаче."
