--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -102,6 +102,9 @@ ru:
           working:
             description: "Каждый рабочий день, в рабочее время, в случае, если задача не обновлялась указанное в общих настройках количество часов и находится в статусе <strong>В работе</strong>, следующие пользователи будут получать сообщения."
             notice: Рабочие дни, рабочее время, статусы, воспринимаемые как <strong>В работе</strong>, указываются в <a href="/settings/plugin/redmine_intouch" target="_blank">настройках плагина</a>.
+          sla_alarms:
+            description: Отправка уведомлений от Telegram бота о истечении времени реакции на задачу. Уведомления приходят для новых задач назначенных на группу (пользователя группы), либо задач где последнее обновление сделано клиентом (ожидается реакция админа на ответ)
+            interval: Интервалы для уведомлений (мин. ДО срока)
         settings_no_selected_protocol: Ни один протокол уведомлений не выбран. Выберите требуемые протоколы в <a href="/settings/plugin/redmine_intouch" target="_blank">настройках плагина</a>.
         settings_template_edit: "Редактировать текущий"
         settings_template_label: "Использовать настройки из шаблона"
@@ -125,6 +128,7 @@ ru:
       title: "Статусы"
       unassigned: "Неназначенные/Назначенные на группу"
       working: "В работе"
+      sla_alarms: SLA уведомления
     settings:
       bot_init: Инициализировать бота
       bot_deinit: Деинициализировать бота
